--- a/DigitRecogniserCNN.ipynb
+++ b/DigitRecogniserCNN.ipynb
@@ -18,7 +18,9 @@
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import confusion_matrix"
+    "import math\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n"
    ]
   },
   {
@@ -123,28 +125,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "##lets write a function to plot conv weights\n",
-    "def plotConvWeights(weights):\n",
+    "def plotConvWeights(weights,inputChannel=0):\n",
     "    ##find max and min of weights\n",
     "    w_max = np.max(weights)\n",
     "    w_min = np.min(weights)\n",
     "    \n",
-    "    "
+    "    ##lets get number of weights to plot\n",
+    "    numFilters = weights.shape[3]\n",
+    "    \n",
+    "    ##lets get number of images per axis\n",
+    "    numGrids = math.ceil(math.sqrt(numFilters))\n",
+    "    \n",
+    "    (fig,axes) = plt.subplots(numGrids,numGrids)\n",
+    "    \n",
+    "    for i,ax in enumerate(axes.flat):\n",
+    "        image = weights[:,:,inputChannel,i]\n",
+    "        ax.imshow(image,vmax=w_max,vmin=w_min,interpolation='nearest', cmap='seismic')\n",
+    "        ax.set_xlabel('Filter : '+str(i))\n",
+    "        \n",
+    "        #remove ticks\n",
+    "        ax.set_xticks([])\n",
+    "        ax.set_yticks([])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "##lets write a function to create a convolution layer\n",
+    "##We use same padding and max pooling in window 2x2,Relu as activation function\n",
+    "def createCLayer(inputLayer,numInputChan,filterSize,numOutputChan,usePooling=True):\n",
+    "    shape = [filterSize,filterSize,numInputChan,numOutputChan]\n",
+    "    \n",
+    "    ##Declare weights and biases\n",
+    "    weights = tf.Variable(tf.truncated_normal(shape=shape,stddev=0.05))\n",
+    "    biases = tf.Variable(tf.constant(0.05,shape=[numOutputChan]))\n",
+    "    \n",
+    "    layer = tf.nn.conv2d(input=inputLayer,filter=weights,strides=[1,1,1,1],padding='SAME')\n",
+    "    layer = layer+biases\n",
+    "    \n",
+    "    ##Kindly note that here we are doing pooling first and then applying Relu\n",
+    "    ##This works as max(relu(x))==relu(max(x)) and reduces relu operations by 75%\n",
+    "    ##This doesn't work for other\n",
+    "    if usePooling:\n",
+    "        layer = tf.nn.max_pool(value=layer,ksize=[1,2,2,1],strides=[1,2,2,1],padding='SAME')\n",
+    "    \n",
+    "    layer = tf.nn.relu(layer)\n",
+    "    \n",
+    "    return layer,weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "##lets write a function to flatten\n",
+    "def flattenLayer(layer):\n",
+    "    layer_shape = layer.get_shape()\n",
+    "    \n",
+    "    layerLen = layer_shape[0]*layer_shape[1]*layer_shape[2]\n",
+    "    layerflat = tf.reshape(layer,[-1,layerLen])\n",
+    "    \n",
+    "    return layerflat,layerLen"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "##lets define function to create a fc layer\n",
+    "def "
    ]
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
