--- a/ImageRecognition/ImageClassificationCIFARInception.ipynb
+++ b/ImageRecognition/ImageClassificationCIFARInception.ipynb
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -567,7 +567,19 @@
       "Iteration  2 :-   Training accuracy :  85.7720017433 \n",
       "Time Taken :  23.109750270843506 seconds\n",
       "Iteration  3 :-   Training accuracy :  87.0119988918 *\n",
-      "Time Taken :  24.58297348022461 seconds\n"
+      "Time Taken :  24.58297348022461 seconds\n",
+      "Iteration  4 :-   Training accuracy :  87.8419995308 *\n",
+      "Time Taken :  23.020677089691162 seconds\n",
+      "Iteration  5 :-   Training accuracy :  88.2499992847 *\n",
+      "Time Taken :  22.635862588882446 seconds\n",
+      "Iteration  6 :-   Training accuracy :  88.1500005722 \n",
+      "Time Taken :  22.66644310951233 seconds\n",
+      "Iteration  7 :-   Training accuracy :  88.4199976921 *\n",
+      "Time Taken :  22.736104011535645 seconds\n",
+      "Iteration  8 :-   Training accuracy :  88.7920022011 *\n",
+      "Time Taken :  25.42231559753418 seconds\n",
+      "Iteration  9 :-   Training accuracy :  89.2560005188 *\n",
+      "Time Taken :  22.95388913154602 seconds\n"
      ]
     }
    ],
@@ -577,18 +589,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4534   37   50   41   31    7   14   17  179   90]\n",
+      " [  37 4664    5   22    7    0    4    2   50  209]\n",
+      " [ 146    3 4174  165  173   56  223   28   20   12]\n",
+      " [  42    6   68 4135   83  360  200   56   19   31]\n",
+      " [  49    2  133  163 4268   54  109  207    6    9]\n",
+      " [  10    3   33  466   52 4261   58  101    9    7]\n",
+      " [  18    1   63  144   61   15 4680    7    4    7]\n",
+      " [  40    2   47   82  170   74    9 4550   12   14]\n",
+      " [ 156   38    8   29   12    4   10    1 4679   63]\n",
+      " [  59  152    5   27   12    2    7    6   47 4683]]\n"
+     ]
+    }
+   ],
    "source": [
     "printConfMatrix(labels,np.argmax(labelsTrain,axis=1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
